
[package]
name = "nsdq"
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/j-stach/nsdq"
description = ""
keywords = ["ouch", "itch", "nasdaq", "trading", "finance"]
categories = ["network-programming", "finance"]

exclude = [".git/**", "docs/**", "test/**", "src/test/**", "TODO.md"]

[dependencies]
litch = "0.0.0"
nsdq-util = "0.1.1"
slouch = "0.0.0"

