
[package]
name = "nsdq"
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/j-stach/nsdq"
description = "Re-exports of crates for working with NASDAQ network protocols."
keywords = ["ouch", "itch", "nasdaq", "trading", "finance"]
categories = ["network-programming", "finance"]

exclude = [".git/**"]

[dependencies]
litch = "0.0.0"
nsdq-util = "0.1.1"
slouch = "0.0.0"

