
[package]
name = "nsdq"
version = "0.0.1"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/j-stach/nsdq"
description = "Re-export of libraries for NASDAQ network protocols."
keywords = ["ouch", "itch", "nasdaq", "trading", "finance"]
categories = ["network-programming", "finance"]

exclude = [".git/**"]

[dependencies]
litch = "0.0.1"
nsdq-util = "0.1.2"
slouch = "0.0.3"

